--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>JS ARRAY METHODS</h1>
-    <script src="all.js"></script>
+    <script src="sec.js"></script>
   </body>
 </html>
